--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -1,3 +1,21 @@
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
+jobs:
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
+workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
+
 # The deployment section should be excluded until
 # it is explicitly included in module 5
 
