--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: mocha
+            - run: npm test
 workflows:
     build-and-test:
       jobs:
@@ -24,3 +24,7 @@ workflows:
 #    branch: master
 #    commands:
 #      - $DOCKER_HUB_TRIGGER
+
+test:
+  override:    
+    - mocha
