--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+            - run:
+                command: mocha test --reporter spec
+                when: always
 workflows:
     build-and-test:
       jobs:
