--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,7 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run:
-                command: mocha test --reporter spec
-                when: always
+            - run: npm test
 workflows:
     build-and-test:
       jobs:
