Simplify docker trigger cmd

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - run:
           name: Trigger docker remotely
-          command: curl -v -H "Content-Type: application/json" --data '{"build": true}' -X POST https://hub.docker.com/api/build/v1/source/2b6c67d0-0be1-41b6-8952-d1e5c7cf59ee/trigger/96f10cbb-d052-481f-afc9-161e2972d250/call/
+          command: curl -v -X POST https://hub.docker.com/api/build/v1/source/2b6c67d0-0be1-41b6-8952-d1e5c7cf59ee/trigger/96f10cbb-d052-481f-afc9-161e2972d250/call/
 
 workflows:
     build-and-test-and-deploy:
